Camionero-Con-Prisa/compiling_error.txt
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Camionero-Con-Prisa\main.cpp: In function 'void print_vector(std::vector<_Tp>)':
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Camionero-Con-Prisa\main.cpp:25:1: error: expected ';' before '}' token
 }
 ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Camionero-Con-Prisa\main.cpp: In function 'int main(int, const char**)':
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Camionero-Con-Prisa\main.cpp:31:50: error: too few arguments to function 'std::vector<int> gasStationsWeShouldStopAt(int*, int, int)'
   vector<int> result = gasStationsWeShouldStopAt()
                                                  ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Camionero-Con-Prisa\main.cpp:4:13: note: declared here
 vector<int> gasStationsWeShouldStopAt(int *distanceBetweenGasStation, int n, int rangeOfFuelKilometers) {
             ^
